[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/2d/TX Props.png" type="Texture" id=1]
[ext_resource path="res://sactuaries/sanctuary1.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 443, 0, 43, 99 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.5, 37 )

[node name="Sanctuary1" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 7 )
shape = SubResource( 3 )

[node name="ControlUI" type="Control" parent="."]
margin_left = -20.0
margin_top = -34.0
margin_right = 19.0
margin_bottom = -31.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Background" type="ColorRect" parent="ControlUI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 1 )

[node name="Health" type="ColorRect" parent="ControlUI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 1, 0, 1 )

[connection signal="take_damage" from="." to="." method="_on_Sanctuary1_take_damage"]
